<?xml version="1.0"?>
<package format="2">
  <name>gp_planner</name>
  <version>0.0.0</version>
  <description>The gp_planner package</description>

  <maintainer email="jcheng@todo.todo">udi</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
</package>
