<?xml version="1.0"?>
<package format="2">
  <name>planning_core</name>
  <version>0.0.0</version>
  <description>The planning_core package</description>

  <maintainer email="jchengai@todo.todo">udi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
